# sd-local-delivery-backend-mvp

./: .env.example  AGENTS.md  DEPLOY.md  DESIGN.md  Dockerfile  KICKOFF.md  README.md  SPEC.md  acceptance_test.db  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  start_test_server.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  functional.yml  lint.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_initial_schema.py
docs/: mvp-scope.md  system-design.md
scripts/: seed.py
src/local_delivery/: __init__.py  config.py  db.py  main.py  redis.py
src/local_delivery/models/: __init__.py  base.py  dc.py  inventory.py  order.py  order_line_item.py  product.py
src/local_delivery/routers/: __init__.py  admin.py  catalog.py  dc.py  orders.py
src/local_delivery/schemas/: __init__.py  catalog.py  common.py  dc.py  order.py
src/local_delivery/services/: __init__.py  catalog_service.py  dc_service.py  inventory_service.py  order_service.py
tests/: conftest.py
tests/functional/: test_catalog.py  test_order_lifecycle.py  test_orders.py
tests/unit/: test_catalog_service.py  test_dc_service.py  test_inventory_service.py  test_order_service.py
verify/: __init__.py  manifest.env
verify/acceptance/: __init__.py  conftest.py  test_fr1_dc_lookup.py  test_fr2_category_browse.py  test_fr3_text_search.py  test_fr4_create_order.py  test_fr5_get_order.py  test_fr6_advance_status.py  test_fr7_cancel_order.py  test_fr8_sweep.py
